# austin-airalytics

./: .gitattributes  .gitignore  README.md  analytics_results.json  biome.json  deno.json  drizzle.config.ts  listings_sample.csv  monthly_stats.csv  next.config.ts  package.json  plan.md  pnpm-lock.yaml  tailwind.config.ts  visualization_data.json  vitest.config.ts
analytics/: Cargo.toml  airbnb_analytics.ipynb  airbnb_analytics.nbconvert.ipynb  airbnb_analytics.py  airbnb_analytics.ts  analytics_results.json  listings_sample.csv  monthly_stats.csv
analytics/src/: main.rs
drizzle/: 0000_brave_wendell_vaughn.sql  0001_chubby_ultimatum.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src/app/: csv-upload.test.ts  csv-upload.tsx  dashboard-layout.tsx  globals.css  layout.tsx  listings.columns.test.tsx  listings.columns.tsx  listings.data-table.tsx  listings.data.ts  listings.types.ts  page.tsx
src/app/dashboard/: page.tsx
src/components/: button-grid.tsx  checkbox-list.tsx  filters-sidebar.tsx  hero-section.tsx  landing-page.tsx  loading-skeleton.tsx  map.tsx  metrics-overview.tsx  range-slider-filter.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  input.tsx  label.tsx  slider.tsx  switch.tsx  table.tsx
src/db/: index.ts  schema.ts
src/lib/: cache-utils.ts  constants.ts  csv-parser.ts  listings-processor.test.ts  listings-processor.ts  use-filters.ts  use-scroll-animation.ts  utils.ts  utils.tsx
src/scripts/: load-hosts.ts  load-listings.ts
src/types/: filters.ts  listings.ts
(+12 files in other folders)
