[package]
name = "airbnb-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
linreg = "0.2"
statrs = "0.16"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }